manifest: refactor python scripts for modularity
keyword_substitution.py for single line processing script
generate_from_template.py for template file to output
  file generation for a list of files
tfm_parse_manifest_list.py for building TFM-specific
  database and generated file list and tool invocation
YAML files for test vectors, generated file list

Change-Id: I514b5abff0df5a9c48357a6b52e80fc77595109d
Signed-off-by: Miklos Balint <miklos.balint@arm.com>

--- a/tools/tfm_manifest_list.yaml
+++ b/tools/tfm_manifest_list.yaml
@@ -14,7 +14,7 @@
     {
       "name": "Secure Storage Service",
       "short_name": "SST",
-      "manifest": "../secure_fw/services/secure_storage/manifest.yaml",
+      "manifest": "secure_fw/services/secure_storage/manifest.yaml",
       "tfm_extensions": true,
       "version_major": 0,
       "version_minor": 1
@@ -22,7 +22,7 @@
     {
       "name": "TFM Audit Log Service",
       "short_name": "TFM_Audit_Log",
-      "manifest": "../secure_fw/services/audit_logging/manifest.yaml",
+      "manifest": "secure_fw/services/audit_logging/manifest.yaml",
       "tfm_extensions": true,
       "version_major": 0,
       "version_minor": 1
@@ -30,7 +30,7 @@
     {
       "name": "TFM Core Test Service",
       "short_name": "TFM_Core_Test",
-      "manifest": "../test/test_services/tfm_core_test/manifest.yaml",
+      "manifest": "test/test_services/tfm_core_test/manifest.yaml",
       "tfm_extensions": true,
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
@@ -39,7 +39,7 @@
     {
       "name": "TFM Core Test Service 2",
       "short_name": "TFM_Core_Test_2",
-      "manifest": "../test/test_services/tfm_core_test_2/manifest.yaml",
+      "manifest": "test/test_services/tfm_core_test_2/manifest.yaml",
       "tfm_extensions": true,
       "conditional": "TFM_PARTITION_TEST_CORE",
       "version_major": 0,
@@ -48,7 +48,7 @@
     {
       "name": "TFM SST Test Service",
       "short_name": "TFM_SST_Test",
-      "manifest": "../test/test_services/tfm_sst_test_service/manifest.yaml",
+      "manifest": "test/test_services/tfm_sst_test_service/manifest.yaml",
       "tfm_extensions": true,
       "conditional": "TFM_PARTITION_TEST_SST",
       "version_major": 0,
