Core: create iovec-based veneers for secure functions
Define uniform API for all secure functions to enable
IO buffer sanitization when a secure function call is
made.
If secure function API is adopted for a given secure
function, it no longer needs to add a veneer, which
is instead auto-generated from the manifest file.

Change-Id: If3cdf579b0c39b5c1dff0721b3d563e06582825f
Signed-off-by: Miklos Balint <miklos.balint@arm.com>

--- a/tools/tfm_generated_file_list.yaml
+++ b/tools/tfm_generated_file_list.yaml
@@ -45,6 +45,16 @@
         "name": "MUSCA-B1 secure ld file",
         "short_name": "musca_s.ld",
         "output": "platform/ext/target/musca_b1/Device/Source/gcc/musca_s.ld"
+    },
+    {
+        "name": "Secure Veneers C file",
+        "short_name": "tfm_veneers_c",
+        "output": "secure_fw/ns_callable/tfm_veneers.c"
+    },
+    {
+        "name": "Secure Veneers H file",
+        "short_name": "tfm_veneers_h",
+        "output": "interface/include/tfm_veneers.h"
     }
   ]
 }
