SST: Rename get_attributes APIs to get_info
This patch renames get_attributes functions to get_info, and updates
the SST code as follows:
- rename tfm_sst_attribs_t to tfm_sst_asset_info_t
- rename sst_asset_infoi_t to sst_asset_policy_t in
  sst_asset_management
- add sst_core_obj_info_t in sst_core
- update sst service APIs and code to accomodate it to the new types
  and type names
- update dependant tests to accomodate them to the new names

Change-Id: Ifa0e56c3c15c7de40d6af4aa3f96c8bd7eae85f2
Signed-off-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -34,9 +34,9 @@
       "minor_policy": "strict"
     },
     {
-      "sfid": "SST_AM_GET_ATTRIBUTES_SFID",
-      "signal": "SST_AM_GET_ATTRIBUTES",
-      "tfm_symbol": "sst_am_get_attributes",
+      "sfid": "SST_AM_GET_INFO_SFID",
+      "signal": "SST_AM_GET_INFO",
+      "tfm_symbol": "sst_am_get_info",
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
