--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -142,14 +142,25 @@ function(set_up_secure_fw_build)
 	embedded_set_target_compile_defines(TARGET ${PROJECT_OBJ_LIB} LANGUAGE C DEFINES __thumb2__ __ARM_FEATURE_CMSE=3 TFM_LVL=${TFM_LVL} DAUTH_CHIP_DEFAULT APPEND)
 
 	if (REGRESSION OR CORE_TEST)
-		#The test service veneers may not be referenced in the secure binary so the
-		#veneer objects are explicitly loaded from the secure tests library.
-		if(${COMPILER} STREQUAL "ARMCLANG")
-			target_link_libraries(${EXE_NAME} tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest $<TARGET_LINKER_FILE:tfm_secure_tests>\(*veneers.o\) tfm_secure_tests)
-		elseif(${COMPILER} STREQUAL "GNUARM")
-			target_link_libraries(${EXE_NAME} tfm_secure_tests tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest)
+		if (DEFINED TFM_PARTITION_TEST_SST AND TFM_PARTITION_TEST_SST)
+			#The test service veneers in the tfm_secure_tests library may not be
+			#referenced in the secure binary so the veneer objects are explicitly loaded
+			#from the secure tests library. However by generating the veneer files from
+			#the manifests, all the iovec interfaced veneers are in a single file in the
+			#secure_fw directory. The core test partitions use the veneers with the
+			#iovec API, so we only need the explicit load in case the SST test partition
+			#is present.
+			#FIXME Remove the explicit load and the above comment once the SST test
+			#partition uses the generated veneers.
+			if(${COMPILER} STREQUAL "ARMCLANG")
+				target_link_libraries(${EXE_NAME} tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest $<TARGET_LINKER_FILE:tfm_secure_tests>\(*veneers.o\) tfm_secure_tests)
+			elseif(${COMPILER} STREQUAL "GNUARM")
+				target_link_libraries(${EXE_NAME} tfm_secure_tests tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest)
+			else()
+				message(FATAL_ERROR "unknown compiler" )
+			endif()
 		else()
-			message(FATAL_ERROR "unknown compiler" )
+			target_link_libraries(${EXE_NAME} tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest tfm_secure_tests)
 		endif()
 	else()
 		target_link_libraries(${EXE_NAME} tfm_crypto tfm_storage tfm_audit tfm_platform tfm_attest)
@@ -222,7 +233,7 @@ function(set_up_secure_fw_build)
 		set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Default install location for secure_fw." FORCE)
 	endif()
 
-        #Export files needed to interface external applications at: <build_dir>/install/export/tfm/
+	#Export files needed to interface external applications at: <build_dir>/install/export/tfm/
 	install(DIRECTORY ${TFM_ROOT_DIR}/interface/include/
 			DESTINATION export/tfm/inc)
 
