manifest: change tfm_linker_pattern structure
GCC linker scripts uses different syntax for describing input sections
for libraries and for object file. To be able to generate linker scripts
from templates based on manifests, libraries and files have to be
differentiated in the manifest.

Change-Id: Ie6acad46df2dfb24544ba1e1047c9b9f24343136
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -60,7 +60,9 @@
   "source_files": [
     "log_core.c"
   ],
-  "tfm_linker_pattern": [
+  "tfm_linker_pattern": {
+    "library_list": [
       "*tfm_audit*"
-  ]
+    ]
+  }
 }
