--- a/test/test_services/tfm_core_test/manifest.yaml
+++ b/test/test_services/tfm_core_test/manifest.yaml
@@ -50,7 +50,9 @@
   "source_files": [
     "./tfm_ss_core_test.c"
   ],
-  "tfm_linker_pattern": [
-    "*tfm_ss_core_test.*"
-  ]
+  "tfm_linker_pattern": {
+    "object_list": [
+      "*tfm_ss_core_test.*"
+    ]
+  }
 }
