--- a/test/test_services/tfm_sst_test_service/manifest.yaml
+++ b/test/test_services/tfm_sst_test_service/manifest.yaml
@@ -53,7 +53,9 @@
   "source_files": [
     "sst_test_service.c"
   ],
-  "tfm_linker_pattern": [
-    "*sst_test_service.*"
-  ]
+  "tfm_linker_pattern": {
+    "object_list": [
+      "*sst_test_service.*"
+    ]
+  }
 }
