--- a/test/test_services/tfm_core_test_2/manifest.yaml
+++ b/test/test_services/tfm_core_test_2/manifest.yaml
@@ -36,7 +36,9 @@
   "source_files": [
     "./tfm_ss_core_test_2.c"
   ],
-  "tfm_linker_pattern": [
-    "*tfm_ss_core_test_2.*"
-  ]
+  "tfm_linker_pattern": {
+    "object_list": [
+      "*tfm_ss_core_test_2.*"
+    ]
+  }
 }
