Platform: Fix relative include paths of linker
Instead of using hard-coded relative include paths in the linker
command files, this change sets the include search path
in the command line.

Change-Id: I6d117a5bbf624f7c252f12103dee2afd338f2983
Signed-off-by: Gabor Kertesz <gabor.kertesz@arm.com>

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -65,7 +65,12 @@ endif()
 if(NOT DEFINED NS_SCATTER_FILE_NAME)
 	message(FATAL_ERROR "ERROR: Incomplete Configuration: NS_SCATTER_FILE_NAME not defined, Include this file from a Config*.cmake")
 endif()
-embedded_set_target_linker_file(TARGET tfm_ns PATH  "${NS_SCATTER_FILE_NAME}")
+embedded_set_target_linker_file(TARGET ${PROJECT_NAME} PATH  "${NS_SCATTER_FILE_NAME}")
+
+if(NOT DEFINED PLATFORM_LINK_INCLUDES)
+	message(FATAL_ERROR "ERROR: Incomplete Configuration: PLATFORM_LINK_INCLUDES is not defined.")
+endif()
+embedded_set_target_link_includes(TARGET ${PROJECT_NAME} INCLUDES "${PLATFORM_LINK_INCLUDES}")
 
 #Set include directories.
 embedded_target_include_directories(TARGET ${PROJECT_NAME} PATH ${TFM_ROOT_DIR}/common/sct ABSOLUTE APPEND)
