SST: Add SST flash filesystem layer
This patch adds SST flash filesystem layer to abstract how
the objects are stored in flash from the object system layer.

Change-Id: Id0f0112b736dbf299fc7f8a0fd4b28770402b0ba
Signed-off-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -80,6 +80,7 @@
     "sst_encrypted_object.c",
     "sst_object_system.c",
     "sst_asset_management.c",
+    "sst_flash_fs.c",
     "assets/sst_asset_defs.c",
     "crypto/sst_crypto_interface.c",
     "flash/sst_flash.c"
