Core: move PSA API sources into `ipc` directory
Move ipc related source code to 'ipc' folder for easier code
browsing. This also readies codebase for future additions.

Change-Id: Icc78338a3832b73e9a71bf33577829bf310da890
Signed-off-by: Ken Liu <ken.liu@arm.com>

--- a/secure_fw/CMakeLists.txt
+++ b/secure_fw/CMakeLists.txt
@@ -30,6 +30,10 @@ endif()
 include(${SECURE_FW_DIR}/spm/CMakeLists.inc)
 include(${SECURE_FW_DIR}/core/CMakeLists.inc)
 include(${SECURE_FW_DIR}/ns_callable/CMakeLists.inc)
+# Involve IPC sources only PSA APIs are there
+if(TFM_PSA_API)
+	include(${SECURE_FW_DIR}/core/ipc/CMakeLists.inc)
+endif()
 
 set(BUILD_CMSIS_CORE On)
 set(BUILD_RETARGET On)
