--- a/secure_fw/ns_callable/tfm_veneers.c.template
+++ b/secure_fw/ns_callable/tfm_veneers.c.template
@@ -30,9 +30,9 @@ int32_t @@manifest.secure_functions.tfm_symbol@@(struct psa_invec *, size_t, str
                                     struct psa_outvec *out_vec, \
                                     size_t out_len) \
     { \
-        TFM_CORE_SFN_REQUEST(partition_name##_ID, \
-                             sfn_name, \
-                             in_vec, in_len, out_vec, out_len); \
+        TFM_CORE_IOVEC_SFN_REQUEST(partition_name##_ID, \
+                                   sfn_name, \
+                                   in_vec, in_len, out_vec, out_len); \
     }
 
 @!GENERATOR_BLOCK_START!@
