--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -75,15 +75,16 @@
     }
   ],
   "source_files": [
-    "sst_core.c",
     "sst_utils.c",
     "sst_encrypted_object.c",
     "sst_object_system.c",
     "sst_asset_management.c",
-    "sst_flash_fs.c",
     "assets/sst_asset_defs.c",
     "crypto/sst_crypto_interface.c",
-    "flash/sst_flash.c"
+    "flash/sst_flash.c",
+    "flash_fs/sst_flash_fs.c",
+    "flash_fs/sst_flash_dblock.c",
+    "flash_fs/sst_flash_mbock.c",
   ],
   "tfm_linker_pattern": {
     "library_list": [
