--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -45,7 +45,9 @@ set(NS_APP_SRC "${CMSIS_5_DIR}/CMSIS/RTOS2/RTX/Config/RTX_Config.c"
 	"${APP_DIR}/os_wrapper_rtx.c"
 	"${INTERFACE_DIR}/src/tfm_sst_api.c"
 	"${INTERFACE_DIR}/src/tfm_audit_api.c"
+	"${INTERFACE_DIR}/src/tfm_nspm_svc_handler.c"
 	"${INTERFACE_DIR}/src/tfm_id_mngr_dummy.c"
+	"${INTERFACE_DIR}/src/tfm_nspm_api.c"
 	"${INTERFACE_DIR}/src/tfm_ns_lock_rtx.c"
 	)
 
