--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -57,6 +57,7 @@ set(BUILD_TIME Off)
 set(BUILD_STARTUP On)
 set(BUILD_TARGET_CFG Off)
 set(BUILD_TARGET_HARDWARE_KEYS Off)
+set(BUILD_TARGET_NV_COUNTERS Off)
 set(BUILD_CMSIS_DRIVERS On)
 set(BUILD_UART_STDOUT Off)
 set(BUILD_FLASH Off)
