Test: fix secure test client partition
This change is necessary to execute test cases in the secure
test client partition in case of TFM_LVL==3:
 - rename files in test/framework folder, prefix was added
 - add missing files to test client partition in linker scripts
 - add execution region for secure test client partition in
   Musca A1 linker config file
 - update affected files due to renaming

Change-Id: If9605ad65daf4341d3e520ae69ba4d9d7f31415c
Signed-off-by: Tamas Ban <tamas.ban@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -74,7 +74,7 @@ if(CMAKE_INSTALL_PREFIX_INITIALIZED_TO_DEFAULT)
 	set(CMAKE_INSTALL_PREFIX "${CMAKE_BINARY_DIR}/install" CACHE PATH "Default install location for tfm_storage." FORCE)
 endif()
 
-install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/framework/integ_test.h
+install(FILES ${CMAKE_CURRENT_SOURCE_DIR}/framework/test_framework_integ_test.h
 				${CMAKE_CURRENT_SOURCE_DIR}/suites/sst/non_secure/os_wrapper.h
 				${CMAKE_CURRENT_SOURCE_DIR}/test_services/tfm_sst_test_service/sst_test_service.h
 				${CMAKE_CURRENT_SOURCE_DIR}/test_services/tfm_secure_client_service/tfm_secure_client_service.h
