SST: Add rollback protection in SST service
This patch adds rollback protection in SST service, enables it for all
supported platforms and updates the SST service integration guide.

Change-Id: If4697051824766e1ae5774ede0e9960088bdd46a
Signed-off-by: Marc Moreno <marc.morenoberengue@arm.com>

--- a/secure_fw/services/secure_storage/manifest.yaml
+++ b/secure_fw/services/secure_storage/manifest.yaml
@@ -85,6 +85,7 @@
     "flash_fs/sst_flash_fs.c",
     "flash_fs/sst_flash_dblock.c",
     "flash_fs/sst_flash_mbock.c",
+    "nv_counters/sst_nv_counters.c",
   ],
   "tfm_linker_pattern": {
     "library_list": [
