--- a/test/test_services/tfm_secure_client_service/manifest.yaml
+++ b/test/test_services/tfm_secure_client_service/manifest.yaml
@@ -45,7 +45,7 @@
       "*uart_stdout.*",
       "*Driver_USART.*",
       "*arm_uart_drv.*",   # MPS2-AN521, MPS2-AN519
-      "*uart_pl011_drv.*", # Musca-A1
+      "*uart_pl011_drv.*", # Musca-A1, Musca-B1
       "*secure_suites.*",
     ],
     "library_list": [
