AuditLog: Define a secure API interface layer
This change introduces an interface layer towards the
secure world which exposes the same API exposed to NS
instead of calling the veneers directly. This layer is
placed into the SFN section during TFM build process.
The secure suite for Audit Log test is updated to use
this interface.

Change-Id: I716633cc95d7804412d0f2ed33ca39a6159e9e20
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/secure_fw/services/audit_logging/manifest.yaml
+++ b/secure_fw/services/audit_logging/manifest.yaml
@@ -67,7 +67,8 @@
   ],
   "source_files": [
     "audit_core.c",
-    "audit_wrappers.c"
+    "audit_wrappers.c",
+    "tfm_audit_secure_api.c"
   ],
   "tfm_linker_pattern": {
     "library_list": [
