Test: Add testcase for testing outvec write
Change-Id: I855e6a5ad9b073d89aaf404a03a96f895cd5642f
Signed-off-by: Mate Toth-Pal <mate.toth-pal@arm.com>

--- a/test/test_services/tfm_core_test_2/manifest.yaml
+++ b/test/test_services/tfm_core_test_2/manifest.yaml
@@ -39,6 +39,14 @@
       "non_secure_clients": true,
       "minor_version": 1,
       "minor_policy": "strict"
+    },
+    {
+      "sfid": "TFM_CORE_TEST_2_SFN_GET_EVERY_SECOND_BYTE",
+      "signal": "TFM_CORE_TEST_2_SFN_GET_EVERY_SECOND_BYTE",
+      "tfm_symbol": "spm_core_test_2_get_every_second_byte",
+      "non_secure_clients": true,
+      "minor_version": 1,
+      "minor_policy": "strict"
     }
   ],
   "source_files": [
