Crypto: Add test infrastructure
This patch introduces changes to run regression testing
for both secure and non-secure domains for the Crypto
service. It also provides a basic set of tests for AES
symmetric ciphers in CFB and CBC mode.

Change-Id: Ib3f54056cd2b21a327c55539dd130d100aa23e45
Signed-off-by: Antonio de Angelis <antonio.deangelis@arm.com>

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -48,6 +48,7 @@ endif()
 
 set(ENABLE_SECURE_STORAGE_SERVICE_TESTS TRUE)
 set(ENABLE_AUDIT_LOGGING_SERVICE_TESTS TRUE)
+set(ENABLE_CRYPTO_SERVICE_TESTS TRUE)
 set(ENABLE_INVERT_SERVICE_TESTS TRUE)
 include(${CMAKE_CURRENT_LIST_DIR}/CMakeLists.inc)
 
